fix: display correctly files/folders containing % in their names - EXO-59750